[1998] fixed shifted compare count in mobile view and font family Menu.style.scss and stlyes for compare count in Header.style.scss

--- a/packages/scandipwa/src/component/Header/Header.style.scss
+++ b/packages/scandipwa/src/component/Header/Header.style.scss
@@ -200,12 +200,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 75%;
+        font-size: 11px;
         font-weight: 700;
 
-        @include desktop {
-            inset-block-start: -20px;
-            inset-inline-end: -12px;
+        @include desktop{
+            top: -23px;
         }
     }
 
@@ -250,7 +249,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 80%;
+            font-size: 11px;
             font-weight: 700;
 
             @include mobile {
