--- a/packages/scandipwa/src/component/Menu/Menu.style.scss
+++ b/packages/scandipwa/src/component/Menu/Menu.style.scss
@@ -53,12 +53,11 @@
     }
 
     &-CompareCountInMenu {
-        font-family: Mulish;
         font-style: normal;
         font-weight: bold;
         font-size: 12px;
         line-height: 16px;
-        margin-left: 100px;
+        margin-left: 150px;
         top: -2px;
     }
 
